# py-pkg-template

./: .flake8  .gitignore  .gitpod.Dockerfile  .gitpod.yml  README.md  dev-requirements.txt  pyproject.example.toml  pyproject.toml  setup.bash
src/pkg_name/: __init__.py
tests/pkg_name/: test_init.py
