[tool.poetry]
name = "pkg-name"
version = "1.0.0"
description = "Python package project template."
authors = ["Takeru Saito <takelushi@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/takelushi/<REPO_NAME>"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[tool.poetry.urls]
issues = "https://github.com/takelushi/<REPO_NAME>/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
